--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sofloc",
   "version": "1.0.0",
   "private": false,
-  "homepage": "https://russoedu.github.io/SoFloC/",
+  "homepage": "https://russoedu.github.io/sofloc/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
